--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     
     <div class="container-formulario">
       <form action="/" class="formulario">
-        <label for="">Cardholder Name</label>
-        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar">
+        <label for="nome">Cardholder Name</label>
+        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar" id="nome">
 
-        <label for="">Card Number</label>
-        <input type="text" placeholder="e.g. 1234 5678 9123 0000" class="card-number validar" maxlength="22">
+        <label for="numero">Card Number</label>
+        <input type="text" placeholder="e.g. 1234 5678 9123 0000" class="card-number validar" maxlength="22" id="numero">
 
         <div class="container-input">
           <div class="expDate">
