--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container-formulario">
       <form action="/" class="formulario">
         <label for="name">Cardholder Name</label>
-        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar" id="name" name="name" required pattern="^[ a-zA-Z ]*$">
+        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar" id="name" name="name" required>
 
         <label for="numero">Card Number</label>
         <input type="text" placeholder="e.g. 1234 5678 9123 0000" class="card-number validar" maxlength="22" id="numero">
