--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
     <div class="container-formulario">
       <form action="/" class="formulario">
         <label for="name">Cardholder Name</label>
-        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar" id="name" name="name" required>
+        <input type="text" placeholder="e.g. Jane Appleseed" class="nameCard validar" id="name" name="name" autocomplete="cc-name" required>
 
         <label for="namber">Card Number</label>
-        <input type="text" placeholder="e.g. 1234 5678 9123 0000" class="card-number validar" maxlength="22" id="number" name="number" >
+        <input type="text" placeholder="e.g. 1234 5678 9123 0000" class="card-number validar" maxlength="22" id="number" name="number" autocomplete="cc-number">
 
         <div class="container-input">
           <div class="expDate">
             <label for="">EXP.DATE (MM/YY)</label>
             <div class="containerErroDate">
               <div class="input-expDate">
-                <input type="text" placeholder="MM" class="mes validarDate" maxlength="2" id="month" name="month">
-                <input type="text" placeholder="YY" class="ano validarDate" maxlength="2" id="year" name="year">
+                <input type="text" placeholder="MM" class="mes validarDate" maxlength="2" id="month" name="month" autocomplete="cc-exp-month">
+                <input type="text" placeholder="YY" class="ano validarDate" maxlength="2" id="year" name="year" autocomplete="cc-exp-year">
               </div>
               <span class="erroDate"></span>
             </div>
@@ -64,7 +64,7 @@
           </div>
           <div class="cvc">
             <label for="">CVC</label>
-            <input type="text" placeholder="e.g. 123" class="input-cvc validar" maxlength="3" id="cvc" name="cvc">
+            <input type="text" placeholder="e.g. 123" class="input-cvc validar" maxlength="3" id="cvc" name="cvc" autocomplete="cc-csc">
           </div>
         </div>
         <button type="submit">Confirm</button>
